.repair-init/repo/pkg/plugins/policies/meshmetric/plugin/v1alpha1/testdata/openTelemetry.clusters.golden.yaml
resources:
- name: system_meshmetric_otel_otel-collector
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    connectTimeout: 5s
    dnsLookupFamily: V4_ONLY
    loadAssignment:
      clusterName: system_meshmetric_otel_otel-collector
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: otel-collector.observability.svc
                portValue: 4317
    name: system_meshmetric_otel_otel-collector
    type: STRICT_DNS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
