.repair-init/repo/pkg/plugins/policies/meshmetric/plugin/v1alpha1/testdata/openTelemetry.listeners.golden.yaml
resources:
- name: system_dynamicconfig
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      pipe:
        path: /tmp/kuma-mesh-metric-config.sock
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            maxDirectResponseBodySizeBytes: 348
            virtualHosts:
            - domains:
              - '*'
              name: system_dynamicconfig
              routes:
              - directResponse:
                  status: 304
                match:
                  headers:
                  - name: If-None-Match
                    stringMatch:
                      exact: aeedbf131db9662bf32333791327d1785ab6fc75075dcfacb678ab3eba91efa0
                  path: /meshmetric
                name: system_dynamicconfig_meshmetric_not_modified
              - directResponse:
                  body:
                    inlineString: '{"observability":{"metrics":{"applications":[{"path":"/metrics","port":8080,"address":""}],"backends":[{"type":"OpenTelemetry","name":"otel-collector","openTelemetry":{"endpoint":"/tmp/kuma-otel-otel-collector.sock","refreshInterval":"10s"}}],"extraLabels":{"kuma.proxy_role":"sidecar","kuma.workload":"backend","mesh":"default","zone":"zone-1"}}}}'
                  status: 200
                match:
                  path: /meshmetric
                name: system_dynamicconfig_meshmetric
                responseHeadersToAdd:
                - header:
                    key: Etag
                    value: aeedbf131db9662bf32333791327d1785ab6fc75075dcfacb678ab3eba91efa0
          statPrefix: system_dynamicconfig
    name: system_dynamicconfig
    statPrefix: system_dynamicconfig
- name: system_meshmetric_otel_otel-collector
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      pipe:
        path: /tmp/kuma-otel-otel-collector.sock
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.grpc_stats
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
              emitFilterState: true
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: system_meshmetric_otel_otel-collector
              routes:
              - match:
                  prefix: /
                route:
                  cluster: system_meshmetric_otel_otel-collector
          statPrefix: system_meshmetric_otel_otel-collector
    name: system_meshmetric_otel_otel-collector
    statPrefix: system_meshmetric_otel_otel-collector
